Bug 653607 - IAccessible::accChild fails on ARIA documents, r=davidb